# active-sensing

./: .env  .gitignore  README.md  config.yaml  gp-pipeline.py  job_array.slurm  pyproject.toml  requirements.txt  train.py  workingcommit.txt
models/: __init__.py  cnn.py  mlp.py
utils/: juno-plotting.py  masks.py  plotting.ipynb  utils.py  view-data.py
